update ch13 at 20220224

--- a/ch13/02-cd2/CMakeLists.txt
+++ b/ch13/02-cd2/CMakeLists.txt
@@ -1,9 +1,9 @@
 # 声明要求的 cmake 最低版本
 cmake_minimum_required(VERSION 2.8)
 # 声明一个 cmake 工程
-project( queue )
+project( cd )
+
 
 set(CMAKE_BUILD_TYPE "Debug")
-add_executable( queue bank6.cpp queue.cpp )
 
-
+add_executable( cd main.cpp classic.cpp )
