--- a/ch13/04-port/CMakeLists.txt
+++ b/ch13/04-port/CMakeLists.txt
@@ -1,9 +1,6 @@
 # 声明要求的 cmake 最低版本
 cmake_minimum_required(VERSION 2.8)
 # 声明一个 cmake 工程
-project( queue )
+project( port )
 
-set(CMAKE_BUILD_TYPE "Debug")
-add_executable( queue bank6.cpp queue.cpp )
-
-
+add_executable( port main.cpp port.cpp )
